# doome

./: .env  .gitignore  ASSETS.md  Cargo.toml  ISSUES.md  Justfile  README.md  Shaders.toml  build.rs  rust-toolchain.toml  shell.nix
.cargo/: config
assets/: chandelier.blend  chandelier.mtl  column.mtl  diamond.blend  diamond.mtl  monke.blend  referenceCube.blend  referenceCube.mtl
assets/levels/: level2.tmj  level3.tmj  level4.tmj  level5.tmj  level6.tmj  tileset.tsx
assets/models/: bullet.mtl  ceiling.blend  ceiling.mtl  cell.mtl  door.mtl  elephant.blend  elephant.mtl  explosion.mtl  fireball.mtl  flashlight.blend  flashlight.mtl  floor.blend  floor.hexagon.blend  floor.hexagon.mtl  floor.mtl  gate.mtl  grate.blend  grate.mtl  heart.mtl  lamp.metal.mtl  moth_monster.mtl  picker.mtl  table.mtl  thingy.blend  thingy.mtl  wall.blend  wall.mtl
crates/lib/bevy/: Cargo.toml
crates/lib/bevy/src/: assets.rs  audio.rs  billboard.rs  bullets.rs  components.rs  convert.rs  doome.rs  enemies.rs  events.rs  health.rs  lib.rs  model_animation.rs  nav.rs  navigation.rs  physics.rs  player.rs  raytracer.rs  renderer.rs  rendering_options.rs  shooting.rs  simple_animations.rs  text.rs
crates/lib/bevy/src/assets/: loader.rs  model.rs  storage.rs
crates/lib/bevy/src/assets/loader/: build.rs  load_image.rs  load_material.rs  load_model.rs  load_sound.rs  load_texture.rs  source.rs
crates/lib/bevy/src/physics/: collision.rs  components.rs  events.rs  raycasting.rs  sat.rs
crates/lib/bevy/src/raytracer/: dynamic_geometry_builder.rs  geometry_manager.rs  materials_manager.rs  static_geometry_builder.rs
crates/lib/bevy/src/raytracer/geometry_manager/: geometry_builder.rs  geometry_updater.rs
crates/lib/debug-pass/: Cargo.toml
crates/lib/debug-pass/src/: debug-pass.spv  lib.rs
crates/lib/doome-bevy/: Cargo.toml
crates/lib/doome-bevy/src/: doome.rs  lib.rs  pixels_plugin.rs  renderer.rs  text.rs
crates/lib/engine/: Cargo.toml
crates/lib/engine/src/: canvas.rs  dynamic_geometry_builder.rs  lib.rs  pipeline.rs  static_geometry_builder.rs
crates/lib/engine/src/pipeline/: builder.rs
crates/lib/engine/src/pipeline/builder/: build.rs  load_model.rs
crates/lib/geo/: Cargo.toml
crates/lib/geo/src/: diag.rs  intersect.rs  lib.rs  polygon.rs  sat.rs
crates/lib/meshgen/: Cargo.toml
crates/lib/meshgen/src/: lib.rs
crates/lib/nav/: Cargo.toml
crates/lib/nav/src/: lib.rs
crates/lib/physics/: Cargo.toml
crates/lib/physics/src/: lib.rs
crates/lib/pixels/: Cargo.toml  build.rs
crates/lib/pixels/src/: lib.rs  shader.spv  (+1 more)
crates/lib/raytracer/: Cargo.toml  build.rs
crates/lib/raytracer/src/: geometry_indexer.rs  lib.rs  shader.spv  shader.wgsl
crates/lib/raytracer/src/geometry_indexer/: bvh.rs  flat_bvh.rs  lbvh.rs  serializer.rs
crates/lib/scaler/: Cargo.toml  build.rs
crates/lib/screen-space-effects/: Cargo.toml
crates/lib/shader-common/: Cargo.toml
crates/lib/surface/: Cargo.toml
crates/lib/text/: Cargo.toml
crates/lib/wgpu-ext/: Cargo.toml
crates/shaders/crt/: Cargo.toml
crates/shaders/debug/: Cargo.toml
crates/shaders/pixels/: Cargo.toml
crates/shaders/pixels/src/: lib.rs
crates/shaders/raytracer/: Cargo.toml
crates/shaders/scaler/: Cargo.toml
doome-bevy/: Cargo.toml
doome-bevy/src/: assets.rs  camera.rs  doome.rs  lib.rs  pixels_plugin.rs  text.rs
doome-engine/: Cargo.toml
doome-engine/src/: canvas.rs  dynamic_geometry_builder.rs  geometry_builder.rs  geometry_ext.rs  geometry_indexer.rs  lib.rs  pipeline.rs  scaling_texture_renderer.rs  static_geometry_builder.rs
doome-engine/src/pipeline/: builder.rs
doome-engine/src/pipeline/builder/: build.rs  load_model.rs
doome-engine/src/scaling_texture_renderer/: shader.wgsl
doome-fonts/: Cargo.toml
doome-fonts/src/: lib.rs
doome-raytracer/: Cargo.toml  build.rs
doome-raytracer-shader/: Cargo.toml
doome-raytracer-shader-builder/: Cargo.toml
doome-raytracer-shader-builder/src/: main.rs
doome-raytracer-shader-common/: Cargo.toml
doome-raytracer-shader-common/src/: camera.rs  dynamic_geometry.rs  dynamic_geometry_mapping.rs  geometry.rs  geometry_index.rs  geometry_mapping.rs  hit.rs  lib.rs  light.rs  lightning.rs  lights.rs  material.rs  materials.rs  math.rs  object.rs  padded.rs  ray.rs  sampling.rs  static_geometry.rs  triangle.rs  triangle_mapping.rs  utils.rs  world.rs
doome-raytracer-shader-common/src/utils/: padu32.rs  rgb_to_srgb.rs
doome-raytracer-shader/src/: lib.rs
doome-raytracer/src/: geometry_indexer.rs  lib.rs  uniforms.rs
doome-raytracer/src/geometry_indexer/: bvh.rs  serializer.rs
doome-surface/: Cargo.toml
doome-surface/src/: lib.rs
doome-text/: Cargo.toml
doome-text/src/: lib.rs
raw/: bullet.blend  bullet.psd  column.blend  door.blend  explosion.blend  fireball.blend  fireball.psd  gate.blend  gunsIcons.psd  heart.blend  lamp.metal.blend  moth_monster.blend  moth_monster.psd  muzzle_flash.psd  picker.blend  table.blend  ui.psd
raytracer-shader/: Cargo.toml
raytracer-shader/src/: lib.rs
src/: args.rs  bullets.rs  camera.rs  charon.rs  commands.rs  enemies.rs  engine.rs  entities.rs  explosions.rs  interaction.rs  inventory.rs  levels.rs  main.old.rs  main.rs  markers.rs  math.rs  music.rs  nav.rs  objects.rs  pickable.rs  player.rs  raytracer.rs  rng.rs  settings.rs  sounds.rs  text.rs  ui.rs  ui_and_2d.rs  units.rs  utils.rs  weapons.rs
src/commands/: cmd.rs
src/engine/: canvas.rs  color.rs
src/levels/: builder.rs  coordinator.rs  level0.rs  level1.rs  level2.rs  level3.rs  level4.rs  level5.rs  level6.rs  loader.rs  utils.rs  zone.rs
src/levels/loader/: geometrized.rs  indexed.rs  locator.rs  map.rs  tileset.rs
src/objects/: column.rs  door.rs  flashlight.rs  flashlight_picker.rs  gate.rs  gun_pickups.rs  heart.rs  key.rs  picker.rs  torch.rs
src/ui/: angrey.rs  blood.rs  command_line.rs  console.rs  game_over.rs  gun.rs  health.rs  menu.rs  messages.rs  text.rs  typewriter.rs
src/units/: doome.rs  moth_monster.rs
src/weapons/: definition.rs  definitions.rs  sprites.rs  weapons.rs
web/: index.html
(+36 files in other folders)
