[workspace]
resolver = "2"
members = [
    "crates/lib/*",
    "crates/bin/*",
    "crates/shaders/*",
]

[package]
name = "doome"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace
doome-bevy = { path = "crates/lib/bevy" }
doome-engine = { path = "crates/lib/engine" }
doome-raytracer = { path = "crates/lib/raytracer" }
doome-surface = { path = "crates/lib/surface" }
doome-text = { path = "crates/lib/text" }

# Crates.io
bevy = { version = "0.9", default-features = false, features = ["bevy_winit"] }
glam = "0.22"
image = "0.24"
include_dir = "0.7"
log = "0.4"

[features]
static-assets = []

[profile.dev]
overflow-checks = false
