[workspace]
resolver = "2"
members = [
    "crates/lib/*",
    "crates/bin/*",
    "crates/shaders/*",
]

[package]
name = "doome"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace
doome-bevy = { path = "crates/lib/bevy" }
doome-engine = { path = "crates/lib/engine" }
doome-raytracer = { path = "crates/lib/raytracer" }
doome-surface = { path = "crates/lib/surface" }
doome-nav = { path = "crates/lib/nav" }
doome-geo = { path = "crates/lib/geo" }

# Crates.io
anyhow = "1.0"
bevy = { version = "0.9", default-features = false, features = ["bevy_winit"] }
glam = "0.22"
image = "0.24"
include_dir = "0.7"
indoc = "1.0"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
static-assets = []

[profile.dev]
overflow-checks = false

[patch."crates-io"]
# TODO https://github.com/gfx-rs/naga/issues/1969
naga = { git = "https://github.com/Patryk27/wgpu", branch = "issues/1969" }
