[package]
name = "doome-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
doome-text = { path = "../doome-text" }
doome-engine = { path = "../doome-engine" }
doome-raytracer = { path = "../doome-raytracer" }

bevy = { version = "0.9", default-features = false, features = ["bevy_winit"] }
glam = { version = "0.22", default-features = false }
include_dir = "0.7"
log = "0.4"
pixels = "0.10"
