[package]
name = "doome-raytracer-shader"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
# Workspace
doome-raytracer-shader-common = { path = "../doome-raytracer-shader-common" }

# Crates.io
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", features = ["glam"] }
