[package]
name = "doome-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace
doome-engine = { path = "../engine" }
doome-pixels = { path = "../pixels" }
doome-raytracer = { path = "../raytracer" }
doome-scaler = { path = "../scaler" }
doome-text = { path = "../text" }
doome-wgpu-ext = { path = "../wgpu-ext" }

# Crates.io
bevy = { version = "0.9", default-features = false, features = ["bevy_winit"] }
futures-lite = "1.12"
include_dir = "0.7"
log = "0.4"
wgpu = "0.14"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.14", features = ["webgl"] }

[target.'cfg(target_os = "linux")'.dependencies]
# TODO what about wayland?
winit = { version = "0.27.5", features = ["x11"] }
