[package]
name = "doome-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace
doome-engine = { path = "../engine" }
doome-pixels = { path = "../pixels" }
doome-raytracer = { path = "../raytracer" }
doome-scaler = { path = "../scaler" }
doome-text = { path = "../text" }
doome-wgpu-ext = { path = "../wgpu-ext" }

# Crates.io
anyhow = "1.0"
bevy = { version = "0.9", default-features = false, features = ["bevy_winit"] }
futures-lite = "1.12"
glam = { version = "0.22", default-features = false }
image = "0.24"
include_dir = "0.7"
log = "0.4"
maplit = "1.0"
rectangle-pack = "0.4"
rodio = "0.16"
tobj = "3.2"
wgpu = "0.14"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.14", features = ["webgl"] }

[target.'cfg(target_os = "linux")'.dependencies]
# TODO what about wayland?
winit = { version = "0.27.5", features = ["x11"] }
