[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[build-dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "dcf37b75a7f9e7a94f52c8a3a5d93af795e34cd0", default-features = false, features = [ "use-installed-tools"] }

[dependencies]
# Workspace
shader-common = { path = "../shader-common" }

# Crates.io
bytemuck = "1.0"
glam = { version = "0.22", default-features = false, features = ["bytemuck"] }
instant = "0.1"
log = "0.4"
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", features = ["glam"] }
wgpu = { version = "0.13", features = ["spirv"] }
