[package]
name = "doome-raytracer"
version = "0.1.0"
edition = "2021"

[build-dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "dcf37b75a7f9e7a94f52c8a3a5d93af795e34cd0", default-features = false, features = ["use-installed-tools"] }

[dependencies]
# Workspace
doome-shader-common = { path = "../shader-common" }
doome-wgpu-ext = { path = "../wgpu-ext" }

# Crates.io
bson = "2.3"
glam = { version = "0.22", default-features = false }
instant = "0.1"
log = "0.4"
naga = { version = "0.10", features = ["deserialize"] }
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", features = ["glam"] }
wgpu = { version = "0.14", features = ["glsl", "spirv"] }
