[package]
name = "doome-raytracer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace
doome-shader-common = { path = "../shader-common" }
doome-wgpu-ext = { path = "../wgpu-ext" }

# Crates.io
bson = "2.3"
glam = { version = "0.22", default-features = false }
instant = "0.1"
log = "0.4"
naga = { version = "0.10", features = ["deserialize"] }
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", features = ["glam"] }
wgpu = { version = "0.14", features = ["glsl", "spirv"] }
