[package]
name = "pixel_shader"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
shader-common = { path = "../../lib/shader-common" }
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", features = [
    "glam",
] }
glam = { version = "0.22", default-features = false }
